Fixed formatting of RSVP on smaller screens, updated auto-decline logic to work with backwards navigation

--- a/client/src/app/rsvp-page/rsvp-page.component.css
+++ b/client/src/app/rsvp-page/rsvp-page.component.css
@@ -17,6 +17,7 @@
     font-weight: bold;
     display: inline-block;
     margin-right: 20px;
+    text-align: center;
 }
 input[type='radio'] {
     -webkit-appearance:none;
@@ -33,11 +34,12 @@ input[type='radio']:checked {
     width: 30px;
     height: 30px;
     position: relative;
+    display: inline-block;
 }
 .mark {
     position: absolute;
     top: 3px;
-    left: 87px;
+    left: 4px;
     height: 25px;
     width: 25px;
     pointer-events: none;
